@@ -1,3 +1,12 @@
+2023-09-20T08:07:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6245763144 # 1210
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-20
+* notice: last 14d: unq all: 1 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 146 207 / 147 209
+* notice: next accum: outdated-unq outdated-all / unq all: 147 209 / 148 211
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2023-09-01] / [2023-09-20]
+
 2023-09-01T08:21:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6047142012 # 1169
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-01
